--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.27.2
-pandas==2.1.4
-numpy==1.26.2
-joblib==1.3.2
-sqlite3==3.39.4
-scikit-learn==1.3.0
-matplotlib==3.8.2
+streamlit
+pandas
+numpy
+joblib
+sqlite3
+scikit-learn
+matplotlib
