--- a/requirements.txt
+++ b/requirements.txt
@@ -7,16 +7,16 @@ numpy==1.26.2
 
 # Machine Learning
 joblib==1.3.2
-scikit-learn==1.3.2  # If you use sklearn models
+scikit-learn==1.3.2  # If using sklearn models
 
 # Flask for Backend
 Flask==3.0.0
-Flask-SQLAlchemy==3.1.1  # If using Flask with SQL
-SQLAlchemy==2.0.25  # For database interactions
+Flask-SQLAlchemy==3.1.1  # If using SQLAlchemy
+SQLAlchemy==2.0.25  # ORM for database interactions
 
 # Database Connector (Choose the one you need)
-psycopg2==2.9.9  # For PostgreSQL (if using)
-mysql-connector-python==8.2.0  # For MySQL (if using)
+psycopg2-binary==2.9.9  # Use this instead of psycopg2
+mysql-connector-python==8.2.0  # If using MySQL
 
 # Others
 requests==2.31.0  # If making API calls
