--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ streamlit==1.27.2
 # Data Handling
 pandas==2.1.4
 numpy==1.26.2
+xgboost==2.0.3  # Latest stable version as of now
+
 
 # Machine Learning
 joblib==1.3.2
